--- a/table.html
+++ b/table.html
@@ -4,3 +4,13 @@
     <title>Train Booking</title>
 </head>
 <body>
+    <form>
+        <label for id="fname">Enter you first name :</label>
+        <input type="text" id="fname" required/>
+        <br><br>
+        <label for id="lname">Enter your Last Name :</label>
+        <input type="text" id="lname" required/>
+        <br><br>
+        <label for id="Email">Enter your email :</label>
+        <input type="email" id="Email"/>
+        <br><br>
