--- a/table.html
+++ b/table.html
@@ -14,3 +14,12 @@
         <label for id="Email">Enter your email :</label>
         <input type="email" id="Email"/>
         <br><br>
+        <label for id="DOB">Enter your DOB :</label>
+        <input type="number" id="DOB"/>
+        <br><br>
+        <label for id="gender">Enter your Gender :</label>
+        <input type="name" id="gender" required/>
+        <br><br>
+        <label for id="station from">Enter your station:</label>
+        <input type="text" id="station from" required/>
+        <br><br>
