--- a/table.html
+++ b/table.html
@@ -18,8 +18,21 @@
         <input type="number" id="DOB"/>
         <br><br>
         <label for id="gender">Enter your Gender :</label>
-        <input type="name" id="gender" required/>
+        <input type="text" id="gender" required/>
         <br><br>
         <label for id="station from">Enter your station:</label>
         <input type="text" id="station from" required/>
         <br><br>
+        <label for id="station To">Enter your Destination :</label>
+        <input type="text" id="station To" required/>
+        <br><br>
+        <label for id="Date of journey">Enter your Journey Date:</label>
+        <input type="text" id="Date of journey" required/>
+        <br><br>
+
+
+        <input type="submit" value="submit here"/>
+    </form>
+    
+</body>
+</html>
